# ball-tracker

./: .gitignore  README.md  clips.py  converter.py  inference.py  kfc_tracker.py  main.py  particle_filter.py  position_predictor.pth  pred.py  prepare_yolo_dataset.py  pyproject.toml  render.py  render2.py  render3.py  render4.py  run.sh  splitter.py  tracker.py  train_fh.py  utils.py  visualizer.py
data/field_hockey/annotations/: clips.csv  fh_01_1344-1531.json  fh_01_1733-1982.json  fh_01_2154-2452.json  fh_01_2928-3155.json  fh_01_4512-4736.json  fh_01_4749-4943.json  fh_01_663-861.json  fh_01_6975-7224.json  fh_01_7517-7729.json  fh_01_8230_8465.json  fh_01_8536-8697.json  fh_01_8717-8860.json  fh_01_9476-9580.json  fh_01_9594-9687.json  fh_01_991-1215.json  fh_02_1262-1692.json  fh_02_1783-2083.json  fh_02_2935-3250.json  fh_02_3869-4167.json  fh_02_4180-4287.json  fh_02_4390-4620.json  fh_02_4953-5228.json  fh_02_5710-6007.json  fh_02_6020-6400.json  fh_02_7822-7947.json  fh_02_7956-8142.json  fh_03_1330-1480.json  fh_03_1985-2115.json  fh_03_2131-2280.json  fh_03_2302-2455.json  fh_03_5710-5970.json  fh_03_725-917.json  fh_03_930-1200.json  map.csv
tools/: clips.py  converter.py  data_split.py  label_studio_converter.py  labelstudio.py  pipe_images.py  pipe_video.py  relabel.py  split.py  splitter.py  visualizer.py
