[project]
name = "object-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "joblib>=1.4.2",
    "lapx>=0.5.2",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "ultralytics>=8.3.21",
]
