[project]
name = "object-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filterpy>=1.4.5",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "lapx>=0.5.2",
    "numpy>=2.1.2",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "ultralytics>=8.3.23",
]
